Add missing linux imports

--- a/gbs-occt/CMakeLists.txt
+++ b/gbs-occt/CMakeLists.txt
@@ -7,7 +7,10 @@ include_directories(${CMAKE_SOURCE_DIR})
 
 file(GLOB OCCT_UTILS_SRC_LIST "*.cpp")
 add_library(${PROJECT_NAME} SHARED ${OCCT_UTILS_SRC_LIST})
-target_link_libraries(${PROJECT_NAME} ${OpenCASCADE_LIBRARIES})
+target_link_libraries(${PROJECT_NAME} 
+    ${OpenCASCADE_LIBRARIES}
+    TBB::tbb    
+)
 
 install(TARGETS ${PROJECT_NAME})
 INSTALL_HEADERS(${PROJECT_NAME})
