rem remaining occt dep

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,8 +18,8 @@ message("-- CMake install prefix: " ${CMAKE_INSTALL_PREFIX})
 message("  -> binaries: " ${CMAKE_INSTALL_BINDIR})
 message("  -> libs: " ${CMAKE_INSTALL_LIBDIR})
 message("  -> includes: " ${CMAKE_INSTALL_INCLUDEDIR})
-link_directories(${CMAKE_INSTALL_LIBDIR})
-link_directories(${CMAKE_INSTALL_BINDIR})
+link_directories(${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR})
+link_directories(${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_BINDIR})
 include_directories(${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_INCLUDEDIR})
 
 function(INSTALL_HEADERS REQUIRED_ARG)
@@ -103,6 +103,7 @@ if(${USE_OCCT_UTILS})
     link_directories(${OpenCASCADE_LIBRARY_DIR})
     include_directories(${OpenCASCADE_INCLUDE_DIR})
     add_compile_definitions(_SILENCE_CXX17_ITERATOR_BASE_CLASS_DEPRECATION_WARNING) # occt interators seems to be old
+    add_subdirectory(gbs-occt)
 endif(${USE_OCCT_UTILS})
 
 INSTALL_HEADERS(${PROJECT_NAME})
@@ -127,10 +128,10 @@ add_subdirectory(gbs-io)
 add_subdirectory(gbs-mesh)
 add_subdirectory(tools)
 
-# OCCT utils
-if(${GBS_BUILD_TESTS} OR ${USE_OCCT_UTILS})
-    add_subdirectory(gbs-occt)
-endif(${GBS_BUILD_TESTS} OR ${USE_OCCT_UTILS})
+# # OCCT utils
+# if(${GBS_BUILD_TESTS} OR ${USE_OCCT_UTILS})
+#     add_subdirectory(gbs-occt)
+# endif(${GBS_BUILD_TESTS} OR ${USE_OCCT_UTILS})
 
 # Rendering module
 if(${USE_RENDER} OR ${GBS_BUILD_TESTS} OR ${USE_PYTHON_BINDINGS}) 
