add vc2022 supprot for nvcc

--- a/gbs-cuda/tests/CMakeLists.txt
+++ b/gbs-cuda/tests/CMakeLists.txt
@@ -22,6 +22,7 @@ foreach(file_name ${SRC_LIST})
                 $<$<COMPILE_LANGUAGE:CUDA>:
                 --extended-lambda 
                 # --expt-relaxed-constexpr
+                -allow-unsupported-compiler
                 >
             )
 
