fix conda build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,6 +82,9 @@ endif()
 # libIGES
 include_directories(${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_INCLUDEDIR}/iges/)
 
+# Python Dev
+find_package (Python3 COMPONENTS Interpreter Development)
+
 # VTK
 find_package(VTK COMPONENTS
     CommonCore
@@ -100,8 +103,8 @@ find_package(VTK COMPONENTS
     RenderingContextOpenGL2
     ViewsContext2D
     RenderingGL2PSOpenGL2
-    IOXML 
-    Python
+    IOXML
+    PythonInterpreter
     WrappingPythonCore
 )
 
