--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -10,6 +10,7 @@ find_package (Python3 COMPONENTS Interpreter Development)
 find_package(pybind11 REQUIRED)
 pybind11_add_module(
         ${PROJECT_NAME}
+        gbsBindCurves.cpp
         gbsbindrender.cpp 
         gbsbindmesh.cpp
         gbsbindinterp.cpp
