--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,8 +13,8 @@ requirements:
     - vs2019_win-64 [win]
     - ninja
     - cmake 
-    - python {{ python }}
-    - python-devtools
+    # - python {{ python }}
+    # - python-devtools
     # - libiges # for copy
     # - tbb <2021.0
   host:
@@ -38,7 +38,7 @@ requirements:
     - libiges
     - tbb <2021.0 [linux] # upgrade asap when other package will be ready
   run:
-    - python
+    - python {{ python }}
     - pytest
     - boost >=1.74
     - nlopt
