--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,7 +13,7 @@ requirements:
     - vs2019_win-64 [win]
     - ninja
     - cmake 
-    # - python {{ python }}
+    - python {{ python }}
     # - python-devtools
     # - libiges # for copy
     # - tbb <2021.0
