--- a/gbs-mesh/CMakeLists.txt
+++ b/gbs-mesh/CMakeLists.txt
@@ -1,10 +1,11 @@
 # cmake_minimum_required(VERSION 3.17.0)
 
-project(gbs-mesh LANGUAGES CXX CUDA)
+project(gbs-mesh LANGUAGES CXX)
 
 INSTALL_HEADERS(${PROJECT_NAME})
 
 if(${USE_CUDA})
+    enable_language(CUDA)
     set(CMAKE_CUDA_STANDARD 17)
     if(%{CUDA_ARCHITECTURES})
         set(CMAKE_CUDA_ARCHITECTURES %{CUDA_ARCHITECTURES})
