--- a/gbs-mesh/CMakeLists.txt
+++ b/gbs-mesh/CMakeLists.txt
@@ -4,17 +4,6 @@ project(gbs-mesh LANGUAGES CXX)
 
 INSTALL_HEADERS(${PROJECT_NAME})
 
-if(${USE_CUDA})
-    enable_language(CUDA)
-    set(CMAKE_CUDA_STANDARD 17)
-    if(%{CUDA_ARCHITECTURES})
-        set(CMAKE_CUDA_ARCHITECTURES %{CUDA_ARCHITECTURES})
-    else()
-        set(CMAKE_CUDA_ARCHITECTURES 61) # Max 61 for SB2
-    endif()
-    set(CMAKE_CUDA_STANDARD_REQUIRED ON)
-endif()
-
-if(${GBS_BUILD_TESTS})
+if(${GBS_BUILD_TESTS} AND ${USE_CUDA})
     add_subdirectory(tests)
 endif()
