--- a/gbs-mesh/tests/CMakeLists.txt
+++ b/gbs-mesh/tests/CMakeLists.txt
@@ -1,35 +1,45 @@
-cmake_minimum_required(VERSION 3.20.0)
 
+cmake_minimum_required(VERSION 3.25.0)
 
-# add_definitions(-D_USE_MATH_DEFINES)
 find_package(GTest REQUIRED)
 
-include_directories(${CMAKE_SOURCE_DIR})
+# Set include directories for targets
+target_include_directories(gbs-render PUBLIC ${CMAKE_SOURCE_DIR})
 
-file(GLOB SRC_LIST "tests_*")
-foreach(file_name ${SRC_LIST})
-        get_filename_component(exe_name ${file_name} NAME_WE  )
-        add_executable(${exe_name} ${file_name})
+foreach(file_name
+        tests_halfedgemesh_host.cpp
+        tests_halthedgemesh.cu
+)
+        get_filename_component(exe_name ${file_name} NAME_WE)
 
-
-        target_link_libraries(${exe_name} 
+        add_executable(${exe_name})
+        target_sources(${exe_name} PRIVATE ${file_name})
+        target_link_libraries(${exe_name}
                 GTest::gtest
                 GTest::gtest_main
                 ${VTK_LIBRARIES}
-                gbs-render 
+                gbs-render
         )
 
         target_compile_options(
-                ${exe_name}  PRIVATE 
+                ${exe_name} PRIVATE
                 $<$<COMPILE_LANGUAGE:CUDA>:
-                --extended-lambda 
-                # --expt-relaxed-constexpr
+                --extended-lambda
                 -allow-unsupported-compiler
                 >
-            )
+        )
 
-    if ( MSVC )
-        SET_OUT_DIR(${exe_name} ${CMAKE_BINARY_DIR})
-    endif ( MSVC )
-        
+        set_target_properties(
+                ${exe_name} PROPERTIES
+                CUDA_SEPARABLE_COMPILATION ON
+        )
+
+        if(MSVC)
+                SET_OUT_DIR(${exe_name} ${CMAKE_BINARY_DIR})
+        endif(MSVC)
+
+        add_test(
+                NAME ${exe_name}
+                COMMAND ${exe_name}
+        )
 endforeach()
