--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,6 @@
 package:
   name: gbs
-  version:  0.3.4
+  version:  0.3.5
 source:  
   # git_url: https://github.com/ssg-aero/gbs.git
   path: ../
@@ -35,23 +35,23 @@ requirements:
     - rapidjson
     - fmt
     - libiges
-    - tbb
+    # - tbb
   run:
     - python {{ python }}
-    - pytest
-    - boost >=1.74
+    # - pytest
+    # - boost >=1.74
     - nlopt
     - vtk >=9.1
     # - eigen
     - rapidjson
-    - fmt
+    # - fmt
     - libiges
     - jupyterlab
     - pythreejs
     - pyvista
     - plotly
     # - occt >=7.4
-    - tbb
+    # - tbb
 about:
   home: http://www.ssg-aero.com
   license: LGPL3
